[PARTIAL GREEN] Improve test